mémo position et zoom / suppression colonne longitude
#39 : mémorisation de la position et zoom dans cookie
#38 : suppression colonne Longitude des datatables
nettoyage code

--- a/lib/js/key.js.template
+++ b/lib/js/key.js.template
@@ -1,1 +1,17 @@
 var TF_key = "xxx" ; // documentation ici : http://thunderforest.com/docs/apikeys/
+function getCookie(sName) {
+        var cookContent = document.cookie, cookEnd, i, j;
+        var sName = sName + "=";
+ 
+        for (i=0, c=cookContent.length; i<c; i++) {
+                j = i + sName.length;
+                if (cookContent.substring(i, j) == sName) {
+                        cookEnd = cookContent.indexOf(";", j);
+                        if (cookEnd == -1) {
+                                cookEnd = cookContent.length;
+                        }
+                        return decodeURIComponent(cookContent.substring(j, cookEnd));
+                }
+        }       
+        return null;
+}
