--- a/lib/js/key.js.template
+++ b/lib/js/key.js.template
@@ -1,5 +1,6 @@
 var USE_TF = true;
 var TF_key = "xxx" ; // documentation ici : http://thunderforest.com/docs/apikeys/
+var LOAD_ALL_OBSERVATIONS_DEFAULT = false; // au premier accès à l'interface publique : charge toutes les observation ou non
 function getCookie(sName) {
         var cookContent = document.cookie, cookEnd, i, j;
         var sName = sName + "=";
