#103 : centralisation de la définition des cartes affichées dans les interfaces publiques et d'administration, dans lib/js/key.js.template, à copier dans key.js. Facilite l'ajoute/modification des cartes documentation d'installation modifiée

--- a/lib/js/key.js.template
+++ b/lib/js/key.js.template
@@ -1,5 +1,5 @@
-var TF_key = "xxx" ; // documentation ici : http://thunderforest.com/docs/apikeys/
-var LOAD_ALL_OBSERVATIONS_DEFAULT = false; // au premier accès à la='interface publique : charge toutes les observation ou non
+var TF_key = "xxx" ; // API key pour le serveur de tuiles opencyclemap de thunderforest (documentation ici : http://thunderforest.com/docs/apikeys/) dans le cas où ce serveur est utilisé (cf ci-dessous dans la définition des layers)
+var LOAD_ALL_OBSERVATIONS_DEFAULT = false; // au premier accès à l'interface publique : charge toutes les observations ou non
 
 function getCookie(sName) {
         var cookContent = document.cookie, cookEnd, i, j;
@@ -21,3 +21,35 @@ function getCookie(sName) {
 //Surcharge les variables de translation_fr.js et translation_en.js
 //ajouter ici les variables des fichiers translation_fr.js et translation_en.js que vous voulez remplacer sans les perde lors d'une prochaine mise à jour
 //T_header_main = 'Une entête spécifique pour mon instance'; //texte affiché dans l'entête de l'interface publique
+
+
+//Définition des cartes à afficher dans l'interface pour affichage des observations en fonction des catégories sélectionnées
+//1 : définir le layer
+//2 : ajouter une entrée au tableau mapLayersArray contenant le layer ci-dessus
+//ce tableau est utilisé pour afficher des layers sélectionnables dans l'interface
+//Attention : tous les layers définis ici sont chargés sur l'interface, pouvant engendrés un trafic réseau non négligeable
+var mapnik = new OpenLayers.Layer.OSM("OpenStreetMap Mapnik", "https://tile.openstreetmap.org/${z}/${x}/${y}.png",
+        {
+                'sphericalMercator': true,
+                isBaseLayer: true,
+                'attribution': '<a href="http://www.openstreetmap.org" target="_blank">OpenStreetMap</a>'
+        }
+);
+var osmcyclemap = new OpenLayers.Layer.OSM("OSM Cycle Map",
+        ['https://tile.thunderforest.com/cycle/${z}/${x}/${y}.png?apikey='+ TF_key],
+    {
+        'sphericalMercator': true,
+        isBaseLayer: true,
+        'attribution': 'Maps © <a href="http://www.thunderforest.com/" target="_blank">Thunderforest</a>, Data © <a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap contributors</a>'
+    }
+);
+//la carte affichée par défaut est la première
+var mapLayersArray = [
+        [0, 'Mapnik',mapnik],
+        //[1, 'OpenCycleMap', osmcyclemap]
+];
+
+//Création de la carte utilisée dans la vue de modification d'une observation dans l'interface d'administration
+//peut-être la même définition qu'une carte ci-dessus, mais ne pas affecter une variable de carte déjà existante sinon une des 2 cartes ne s'affichera pas
+var adminMapForPoi = new OpenLayers.Layer.OSM("OpenStreetMap Hikebike", "http://toolserver.org/tiles/hikebike/${z}/${x}/${y}.png");
+
