#171 : mapnik is the default map for the administration interface of an observation

--- a/lib/js/key.js.template
+++ b/lib/js/key.js.template
@@ -51,7 +51,13 @@ var mapLayersArray = [
 
 //Création de la carte utilisée dans la vue de modification d'une observation dans l'interface d'administration
 //peut-être la même définition qu'une carte ci-dessus, mais ne pas affecter une variable de carte déjà existante sinon une des 2 cartes ne s'affichera pas
-var adminMapForPoi = new OpenLayers.Layer.OSM("OpenStreetMap Hikebike", "http://toolserver.org/tiles/hikebike/${z}/${x}/${y}.png");
+var adminMapForPoi = new OpenLayers.Layer.OSM("OpenStreetMap Mapnik", "https://tile.openstreetmap.org/${z}/${x}/${y}.png",
+        {
+                'sphericalMercator': true,
+                isBaseLayer: true,
+                'attribution': '<a href="http://www.openstreetmap.org" target="_blank">OpenStreetMap</a>'
+        }
+);
 
 //variables used in the render of observations, grouped together in clusters if there are more than ClusterStrategyNumberOfGroupedObservations observations close to each other of at most ClusterStrategyDistance pixels
 var ClusterStrategyNumberOfGroupedObservations = 6;
