--- a/lib/js/key.js.template
+++ b/lib/js/key.js.template
@@ -73,7 +73,7 @@ var ClusterStrategyDistance = 30;
 //make sure to add a png image for the corresponding shadow shadowHover_colorX.png in the folder resources/icon
 
 //Be aware that an update of velobs will not keep the png files you added in resources/icon, you will have to copy them manually. Feel free to add your new colors in the velobs project on github (https://github.com/2p2r/velobs_web)
-var predefinedColorsForStatus = [['Vert','green'],['Noir','black'],['Rouge','red'],['Bleu','blue']];
+var predefinedColorsForStatus = [['Vert','green'],['Noir','black'],['Rouge','red'],['Bleu','blue'],['Marron','brown'],['Violet','purple']];
 
 //fields to inactivate for each role (have a look at the install.odt file which lists all the ids usable in thes arrays
 var arrayComponentsToDisableRole1Admin = ["latitude","longitude","emailPOIField","StatusPOIField","RespComcomPOIField", "RespPolePOIField","TraitePolePOIField","TransmissionPolePOIField"];
