#219 store some data included in the pdf export, in the config file (name of the association, its address...)

--- a/lib/php/key.php.template
+++ b/lib/php/key.php.template
@@ -17,6 +17,8 @@
 	define('MAIL_SUBJECT_PREFIX', '[Test][VelObs]');
 	
 	define('VELOBS_ASSOCIATION', '2 pieds 2 roues');
+	define('PDF_VELOBS_ASSOCIATION_ADDRESS', "5 Avenue François Collignon\n31200 TOULOUSE\nTel : 05 34 30 94 18\nMail : toulouse@fubicy.org");
+	define('PDF_VELOBS_ASSOCIATION_LOGO', "2p2r.png");
 	define('VELOBS_COLLECTIVITE1', 'Toulouse Métropole');
 	define('VELOBS_COLLECTIVITE2', 'le Sicoval');
 	define('VELOBS_COLLECTIVITE3', 'la CAM');
